name:                chunked-data
version:             0.1.0.0
synopsis:            Typeclasses for dealing with various chunked data representations
description:         Originally present in classy-prelude.
homepage:            https://github.com/fpco/chunked-data
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.IOData
                       Data.Textual.Encoding
                       Data.Sequences.Lazy
                       Data.Builder
                       Data.ChunkedZip
  build-depends:       base >= 4 && < 5
                     , transformers
                     , bytestring
                     , mono-traversable >=0.2
                     , text >= 0.11
                     , system-filepath
                     , blaze-builder
                     , containers
                     , vector
                     , semigroups
