name:                classy-prelude
version:             0.1.0.0
synopsis:            A typeclass-based Prelude.
description:         Focuses on using common typeclasses when possible, and creating new ones to avoid name clashing. Exposes many recommended datastructures (Map, ByteString, etc) directly without requiring long import lists and qualified modules.
homepage:            https://github.com/snoyberg/classy-prelude
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Control
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     ClassyPrelude
                       ClassyPrelude.Classes
  other-modules:       ClassyPrelude.List
                       ClassyPrelude.ByteString
                       ClassyPrelude.LByteString
  build-depends:       base                          >= 4          && < 5
                     , conduit                       >= 0.5        && < 0.6
                     , xml-conduit                   >= 1.0        && < 1.1
                     , system-filepath               >= 0.4        && < 0.5
                     , transformers
                     , containers
                     , text
                     , bytestring
  ghc-options:         -Wall -Werror -fno-warn-orphans
