name:                chunked-data
version:             0.3.0
synopsis:            Typeclasses for dealing with various chunked data representations
description:         Originally present in classy-prelude.
homepage:            https://github.com/snoyberg/mono-traversable
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  README.md ChangeLog.md

library
  exposed-modules:     Data.IOData
                       Data.Builder
                       Data.ChunkedZip
  build-depends:       base >= 4 && < 5
                     , transformers
                     , bytestring >= 0.10.2
                     , text >= 1.2
                     , containers
                     , vector
                     , semigroups

source-repository head
  type:     git
  location: https://github.com/snoyberg/mono-traversable.git
