name:                classy-prelude-conduit
version:             0.9.4
synopsis:            conduit instances for classy-prelude
description:         conduit instances for classy-prelude
homepage:            https://github.com/snoyberg/classy-prelude
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Control, Prelude
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     ClassyPrelude.Conduit
  build-depends:       base                          >= 4          && < 5
                     , conduit                       >= 1.0        && < 1.2
                     , classy-prelude                >= 0.9.4      && < 0.9.5
                     , transformers
                     , monad-control
                     , resourcet
                     , void
                     , bytestring
                     , system-fileio
                     , conduit-combinators           >= 0.2.8
  ghc-options:         -Wall -fno-warn-orphans

test-suite spec
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  build-depends:  base
                , hspec
                , classy-prelude-conduit
                , bytestring
                , transformers
                , QuickCheck
                , conduit

source-repository head
  type:     git
  location: git://github.com/snoyberg/classy-prelude.git
