name:                classy-prelude-conduit
version:             1.0.0
synopsis:            classy-prelude together with conduit functions
description:         classy-prelude together with conduit functions
homepage:            https://github.com/snoyberg/mono-traversable
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Control, Prelude
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  README.md ChangeLog.md

library
  exposed-modules:     ClassyPrelude.Conduit
  build-depends:       base                          >= 4          && < 5
                     , conduit                       >= 1.0        && < 1.3
                     , classy-prelude                >= 1.0.0      && < 1.0.1
                     , transformers
                     , monad-control
                     , resourcet
                     , void
                     , bytestring
                     , conduit-combinators           >= 0.2.8
  ghc-options:         -Wall -fno-warn-orphans

test-suite spec
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  build-depends:  base
                , hspec
                , classy-prelude-conduit
                , bytestring
                , transformers
                , QuickCheck
                , conduit

source-repository head
  type:     git
  location: https://github.com/snoyberg/mono-traversable.git
