name:                classy-prelude-yesod
version:             0.12.4
synopsis:            Provide a classy prelude including common Yesod functionality.
description:         This is an extension of classy-prelude-conduit, adding in commonly used functions and data types from Yesod.
homepage:            https://github.com/snoyberg/classy-prelude
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Control
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     ClassyPrelude.Yesod
  build-depends:       base >= 4 && < 5
                     , classy-prelude >= 0.12.4 && < 0.12.5
                     , classy-prelude-conduit >= 0.12.4 && < 0.12.5
                     , yesod >= 1.2
                     , yesod-newsfeed
                     , yesod-static
                     , http-types
                     , http-conduit
                     , persistent >= 1.1
                     , aeson
                     , data-default
