name:                classy-prelude-yesod
version:             1.0.2
synopsis:            Provide a classy prelude including common Yesod functionality.
description:         This is an extension of classy-prelude-conduit, adding in commonly used functions and data types from Yesod.
homepage:            https://github.com/snoyberg/mono-traversable
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Control
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  README.md ChangeLog.md

library
  exposed-modules:     ClassyPrelude.Yesod
  build-depends:       base >= 4 && < 5
                     , classy-prelude >= 1.0.2 && < 1.0.3
                     , classy-prelude-conduit >= 1.0.2 && < 1.0.3
                     , yesod >= 1.2
                     , yesod-newsfeed
                     , yesod-static
                     , http-types
                     , http-conduit
                     , persistent >= 1.1
                     , aeson
                     , data-default

source-repository head
  type:     git
  location: https://github.com/snoyberg/mono-traversable.git
