name:                classy-prelude
version:             0.10.0
synopsis:            A typeclass-based Prelude.
description:         Focuses on using common typeclasses when possible, and creating new ones to avoid name clashing. Exposes many recommended datastructures (Map, ByteString, etc) directly without requiring long import lists and qualified modules.
homepage:            https://github.com/snoyberg/classy-prelude
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Control, Prelude
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     ClassyPrelude
  build-depends:       base                          >= 4          && < 5
                     , basic-prelude                 >= 0.3.8      && < 0.4
                     , system-filepath               >= 0.4        && < 0.5
                     , transformers
                     , containers                    >= 0.4.2
                     , text
                     , bytestring
                     , vector
                     , unordered-containers
                     , hashable
                     , lifted-base                   >= 0.2
                     , mono-traversable              >= 0.6.2
                     , exceptions                    >= 0.5
                     , semigroups
                     , vector-instances
                     , old-locale
                     , time
                     , chunked-data
                     , enclosed-exceptions
                     , ghc-prim
                     , stm
                     , primitive
                     , mtl
                     , bifunctors
  ghc-options:         -Wall -fno-warn-orphans

test-suite test
    hs-source-dirs: test
    main-is: main.hs
    type: exitcode-stdio-1.0
    build-depends:   classy-prelude
                   , base
                   , hspec >= 1.3
                   , QuickCheck
                   , transformers
                   , containers
                   , unordered-containers
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/classy-prelude.git
