name:                classy-prelude
version:             1.0.0
synopsis:            A typeclass-based Prelude.
description:         Modern best practices without name collisions. No partial functions are exposed, but modern data structures are, without requiring import lists. Qualified modules also are not needed: instead operations are based on type-classes from the mono-traversable package.

homepage:            https://github.com/snoyberg/classy-prelude
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Control, Prelude
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  ChangeLog.md

library
  exposed-modules:     ClassyPrelude
  build-depends:       base                          >= 4          && < 5
                     , basic-prelude                 >= 0.4        && < 0.6
                     , transformers
                     , containers                    >= 0.4.2
                     , text
                     , bytestring
                     , vector
                     , unordered-containers
                     , hashable
                     , lifted-base                   >= 0.2
                     , mono-traversable              >= 1.0
                     , mono-traversable-instances
                     , exceptions                    >= 0.5
                     , semigroups
                     , vector-instances
                     , time
                     , time-locale-compat
                     , chunked-data                  >= 0.3
                     , ghc-prim
                     , stm
                     , primitive
                     , mtl
                     , bifunctors
                     , mutable-containers >= 0.3 && < 0.4
                     , dlist >= 0.7
                     , transformers-base
                     , safe-exceptions
                     , deepseq
  ghc-options:         -Wall -fno-warn-orphans

test-suite test
    hs-source-dirs: test
    main-is: main.hs
    type: exitcode-stdio-1.0
    build-depends:   classy-prelude
                   , base
                   , hspec >= 1.3
                   , QuickCheck
                   , transformers
                   , containers
                   , unordered-containers
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/classy-prelude.git
