name:                conduit-combinators
version:             1.0.8.1
synopsis:            Commonly used conduit functions, for both chunked and unchunked data
description:         Provides a replacement for Data.Conduit.List, as well as a convenient Conduit module.
homepage:            https://github.com/snoyberg/mono-traversable
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Data, Conduit
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  test/subdir/dummyfile.txt fusion-macros.h ChangeLog.md README.md

library
  exposed-modules:     Conduit
                       Data.Conduit.Combinators
                       Data.Conduit.Combinators.Internal
                       Data.Conduit.Combinators.Stream
  other-modules:       Data.Conduit.Combinators.Unqualified
  build-depends:       base >= 4 && < 5
                     , chunked-data
                     , conduit >= 1.2.8
                     , conduit-extra >= 1.1.1
                     , transformers
                     , transformers-base
                     , primitive
                     , mono-traversable >= 0.5
                     , vector
                     , text
                     , bytestring
                     , void
                     , mwc-random
                     , unix-compat
                     , base16-bytestring
                     , base64-bytestring        >= 0.1.1.1
                     , resourcet
                     , monad-control
                     , filepath
  if os(windows)
      cpp-options:     -DWINDOWS
  else
      build-depends:   unix
  include-dirs:        .
  ghc-options:         -Wall -O2

test-suite test
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:  StreamSpec
  type:           exitcode-stdio-1.0
  cpp-options:    -DTEST
  build-depends:  conduit-combinators
                , base
                , hspec >= 1.3
                , text
                , vector
                , transformers
                , chunked-data
                , mono-traversable
                , silently
                , bytestring
                , mwc-random
                , base16-bytestring
                , base64-bytestring
                , mtl
                , conduit
                , containers
                , safe
                , QuickCheck >= 2.5
                , directory
                , filepath
  ghc-options:    -Wall

source-repository head
  type:     git
  location: https://github.com/snoyberg/mono-traversable.git
