name:                minlen
version:             0.1.0.0
synopsis:            Express the minimum length of a container in its type
description:         Please see README.md
homepage:            https://github.com/snoyberg/mono-traversable#readme
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Data
build-type:          Simple
extra-source-files:  README.md ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.MinLen
  build-depends:       base >= 4.7 && < 5
                     , mono-traversable
                     , semigroups
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/snoyberg/mono-traversable
